--- a/src/CombatAnalysis.App/UserControls/Item.xaml
+++ b/src/CombatAnalysis.App/UserControls/Item.xaml
@@ -14,8 +14,8 @@
 
                 <Style.Triggers>
                     <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Background" Value="#f1effb" />
-                        <Setter Property="BorderBrush" Value="#6f52f9" />
+                        <Setter Property="Background" Value="#2E6171" />
+                        <Setter Property="BorderBrush" Value="Pink" />
                     </Trigger>
                     <DataTrigger Binding="{Binding ElementName=item, Path=IsActive}" Value="True">
                         <Setter Property="Background" Value="#f1effb" />
@@ -53,7 +53,7 @@
                 </Grid>
             </Border>
             <StackPanel VerticalAlignment="Center" Grid.Column="1" Margin="15 0 0 0">
-                <TextBlock Text="{Binding ElementName=item, Path=Title}" Foreground="#212121" FontSize="14" FontWeight="SemiBold"/>
+                <TextBlock Text="{Binding ElementName=item, Path=Title}" Foreground="White" FontSize="14" FontWeight="SemiBold"/>
                 <TextBlock Text="{Binding ElementName=item, Path=Message}" Foreground="#8b8b8b" Margin="0 3 0 0"/>
             </StackPanel>
             <Border CornerRadius="50" Width="20" Height="20"
