--- a/src/CombatAnalysis.App/UserControls/MyMessageChat.xaml
+++ b/src/CombatAnalysis.App/UserControls/MyMessageChat.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CombatAnalysis.App.UserControls"
              mc:Ignorable="d" Name="myMessageChat">
 
-    <Border CornerRadius="10 0 10 10" Background="#f8f7fc" Padding="10 7" HorizontalAlignment="Right" Margin="0 5 0 0">
-        <TextBlock Text="{Binding ElementName=myMessageChat, Path=Message}" FontSize="14" Foreground="#94939a" VerticalAlignment="Center" Margin="3 0 3 2"/>
+    <Border CornerRadius="10 0 10 10" Background="Transparent" Padding="10 7" HorizontalAlignment="Right" Margin="0 5 0 0"
+            BorderBrush="{Binding ElementName=myMessageChat, Path=Color}" BorderThickness="2">
+        <TextBlock Text="{Binding ElementName=myMessageChat, Path=Message}" FontSize="14" Foreground="#ffff" VerticalAlignment="Center" Margin="3 0 3 2"/>
     </Border>
 </UserControl>
