--- a/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
+++ b/src/CombatAnalysis.App/Views/DetailsSpecificalCombatView.xaml
@@ -92,7 +92,7 @@
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20 0">
             <TextBlock Text="Filter" FontSize="16" Margin="0 5" Foreground="White" />
             <StackPanel Orientation="Horizontal">
-                <ComboBox Width="175" ItemsSource="{Binding FilterList}" SelectedIndex="{Binding SeletedFilterIndex}" />
+                <ComboBox Style="{DynamicResource ComboBoxStyle1}" Width="175" ItemsSource="{Binding FilterList}" SelectedIndex="{Binding SeletedFilterIndex}" />
                 <Icon:PackIconMaterial Kind="TrashCan" Cursor="Hand" Foreground="Orange" Width="10" Margin="15 5" HorizontalAlignment="Center"
                                        VerticalAlignment="Top" ToolTip="{loc:Loc ClearFilters}">
                     <Icon:PackIconMaterial.InputBindings>
