--- a/src/CombatAnalysis.App/Views/User/LoginView.xaml
+++ b/src/CombatAnalysis.App/Views/User/LoginView.xaml
@@ -32,14 +32,14 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="{loc:Loc Title}"/>
+        <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="26" Text="Details Analysis GCL" Foreground="White"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*" />
                 <RowDefinition Height="1.2*" />
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="0.5*" />
+                <RowDefinition Height="0.2*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*"/>
@@ -48,22 +48,21 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="18" Margin="0 20"/>
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Left" Text="{loc:Loc Email}" FontSize="14" Margin="0 10" Foreground="white"/>
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="18" Margin="0 20"/>
-                <PasswordBox Name="password" Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="30" Padding="3" Width="300" FontSize="14"
-                             PasswordChanged="PasswordBox_PasswordChanged"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Left" Text="{loc:Loc Password}" FontSize="14" Margin="0 10" Foreground="White"/>
+                <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" Name="password" PasswordChanged="PasswordBox_PasswordChanged" />
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc IncorrectData}"
-                           FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding AuthIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
+                           FontSize="12" Foreground="Red" Margin="0 10" Visibility="{Binding AuthIsFailed, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Width="250" Height="80" TextWrapping="Wrap" Text="{loc:Loc LoginFailed}"
-                           FontSize="12" Foreground="Brown" Margin="0 10" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
+                           FontSize="12" Foreground="Red" Margin="0 10" Visibility="{Binding ServerIsNotAvailable, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
             </StackPanel>
-            <Button Grid.Column="1" Grid.Row="3" Height="30" Width="125" Content="{loc:Loc Login}" Style="{StaticResource showButton}"
+            <Button Grid.Column="1" Grid.Row="3" Height="40" Width="125" Content="{loc:Loc Login}" Style="{StaticResource showButton}"
                     Command="{Binding LoginCommand}" />
         </Grid>
-        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="30" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2" Height="40" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
                     Command="{Binding CancelCommand}" />
     </Grid>
 </views:MvxWpfView>
