--- a/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
+++ b/src/CombatAnalysis.App/Views/User/RegistrationView.xaml
@@ -33,7 +33,7 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="{loc:Loc Title}"/>
+        <TextBlock Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="26" Text="{loc:Loc Title}" Foreground="White"/>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -54,52 +54,50 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Email}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Email}" FontSize="14" Foreground="White"/>
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding Email}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PhoneNumber}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding PhoneNumber}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PhoneNumber}" FontSize="14" Foreground="White" />
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding PhoneNumber}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Birthday}" FontSize="16" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Birthday}" FontSize="14" Foreground="White" />
                 <DatePicker Width="300" SelectedDate="{Binding Birthday}" Margin="0 10"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="16" />
-                <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
-                             PasswordChanged="PasswordBox_PasswordChanged"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Password}" FontSize="14" Foreground="White" />
+                <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" PasswordChanged="PasswordBox_PasswordChanged"/>
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="4">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordConfirmation}" FontSize="16" />
-                <PasswordBox Style="{StaticResource passwordTextBox}" VerticalContentAlignment="Center" Height="35" Width="300" FontSize="16"
-                             PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc PasswordConfirmation}" FontSize="14" Foreground="White" />
+                <PasswordBox Style="{DynamicResource PasswordBoxStyle1}" PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
             </StackPanel>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="0">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Username}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding Username}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc Username}" FontSize="14" Foreground="White" />
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding Username}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc FirstName}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding FirstName}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc FirstName}" FontSize="14" Foreground="White" />
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding FirstName}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc LastName}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}" VerticalContentAlignment="Center" Height="35" Padding="5" Width="300" FontSize="16" Text="{Binding LastName}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc LastName}" FontSize="16" Foreground="White" />
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding LastName}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="3" Grid.RowSpan="2" Grid.Row="3">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc AboutMe}" FontSize="16" />
-                <TextBox Style="{StaticResource messageTextBox}"  Height="120" TextWrapping="Wrap" Padding="5" Width="300" FontSize="16" Text="{Binding AboutMe}" />
+                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="{loc:Loc AboutMe}" FontSize="14" Foreground="White" />
+                <TextBox Style="{DynamicResource TextBoxStyle1}" Text="{Binding AboutMe}" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Orientation="Horizontal" Grid.Column="3" Grid.Row="4" Margin="25 -10">
-                <RadioButton Content="{loc:Loc Man}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='0:='}" FontSize="14" Margin="25 0" />
-                <RadioButton Content="{loc:Loc Woman}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='1:='}" FontSize="14" Margin="25 0" />
+                <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Man}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='0:='}" FontSize="14" Margin="25 0" />
+                <RadioButton Style="{DynamicResource RadioButtonStyle1}" Content="{loc:Loc Woman}" IsChecked="{Binding Gender, Converter={StaticResource IntToXAMLBool}, ConverterParameter='1:='}" FontSize="14" Margin="25 0" />
             </StackPanel>
 
-            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="5" Height="30" Width="125" Content="{loc:Loc Registration}" Style="{StaticResource showButton}"
+            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="5" Height="40" Width="125" Content="{loc:Loc Registration}" Style="{StaticResource showButton}"
                     Command="{Binding RegistrationCommand}" />
-            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="7" Height="30" Width="125" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
+            <Button Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="6" Grid.RowSpan="2" Height="40" Width="125" VerticalAlignment="Bottom" Content="{loc:Loc Back}" Style="{StaticResource showButton}"
                     Command="{Binding CancelCommand}" />
             
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="6">
